k8s/overlays/prod-release-internal-tls-voice-gateway-smart-home-service/voice-gateway.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-gateway
  namespace: jarvis
spec:
  template:
    metadata:
      annotations:
        jarvis.io/internal-tls-slice-voice-gateway-smart-home-service: voice-gateway-smart-home-service-v1
    spec:
      containers:
        - name: voice-gateway
          volumeMounts:
            - name: internal-tls-voice-gateway-smart-home-service
              mountPath: /tls-smart-home
              readOnly: true
      volumes:
        - name: internal-tls-voice-gateway-smart-home-service
          secret:
            secretName: jarvis-internal-tls-voice-gateway-smart-home-service
            items:
              - key: truststore.jks
                path: jarvis-internal-truststore.jks
              - key: ca.crt
                path: ca.crt
